# groupware-actix

./: Cargo.toml
src/: controllers.rs  database.rs  main.rs  models.rs
src/company/: controllers.rs  models.rs  routes.rs
src/user/: controllers.rs  models.rs  routes.rs
