[package]
name = "groupware-actix"
version = "0.1.0"
edition = "2018"
authors = ["bitfriend <bitfriend@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3"
actix-ratelimit = "0.3"
actix-web = "3.3"
anyhow = "1.0"
arangors = { version = "0.5", default-features = false }
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
futures = "0.3"
mime = "0.3"
r2d2 = "0.8"
r2d2_arangors = "0.2"
sanitize-filename = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uclient = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.14", features = ["derive"] }
