[package]
name = "groupware-actix"
version = "0.1.0"
edition = "2018"
authors = ["bitfriend <bitfriend@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.4.0-beta.6"
actix-web = "4.0.0-beta.9"
arangors = { path = "./libs/arangors", version = "0.4.8", default-features = false }
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
mime = "0.3"
mobc = "0.7"
mobc-arangors = { path = "./libs/mobc-arangors", version = "0.2.2", default-features = false, features = ["reqwest"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.14", features = ["derive"] }
